@@ -1,4 +1,4 @@
-#+title: keyboard-visualizer
+#+title: Visualize Keyboard Shortcuts for Emacs Commands
 #+author: James Dyer
 #+email: captainflasmr@gmail.com
 #+language: en
@@ -6,20 +6,18 @@
 #+todo: TODO DOING | DONE
 #+startup: showall
 
-* Keyboard Visualizer: Visualize Keyboard Shortcuts for Emacs Commands
-
-** Overview
+* Overview
 
 =keyboard-visualizer= is an Emacs package that allows users to visualize keyboard shortcuts as key sequences on a keyboard layout. This package can highlight keys for single or multi-chord commands and display side-by-side layouts for all chords in a sequence.
 
 Whether you're a new user learning Emacs keybindings or an advanced user customizing your workflows, =keyboard-visualizer= provides an intuitive way to understand and practice keyboard shortcuts.
 
-** Screenshots
+* Screenshots
 
 [[file:img/demo_001.gif]]
 [[file:img/demo_002.gif]]
 
-** Features
+* Features
 
 - Visualize keyboard shortcuts with real-time highlighting on a keyboard layout.
   - Supports single-chord and multi-chord commands.
@@ -33,9 +31,19 @@ Whether you're a new user learning Emacs keybindings or an advanced user customi
   - Define custom keyboard layouts.
   - Full control over displayed faces and styles.
 
-** Whats New
+* Whats New
 
-*** <2025-01-24>
+** <2025-01-26>
+
+Added ergonomic indicator
+
+- Enhanced `keyboard-visualizer--draw-single-layout` to optionally highlight non-ergonomic key combinations based on chord-side alignment.
+- Added `keyboard-visualizer--key-side` helper function to determine if a key belongs to the left or right side of the keyboard layout.
+- Implemented `keyboard-visualizer-ergonomic-indicator-toggle` to allow toggling ergonomic highlighting via user interaction.
+- Added a new customizable variable `keyboard-visualizer-ergonomic-indicator` to manage the state of the ergonomic indicator.
+- Updated the interactive command menu to include the ergonomic indicator toggle `[e]`.
+
+** <2025-01-24>
 
 Enhanced with natural language query commands and new features
 
@@ -50,7 +58,7 @@ Enhanced with natural language query commands and new features
   - Added `[s]` for saving the keyboard layout.
   - Removed `[l]` and deprecated learning mode toggle.
 
-*** <2025-01-24>
+** <2025-01-24>
 
 Enhance keyboard visualizer with learning mode and user interface improvements
 
@@ -69,11 +77,11 @@ Enhance keyboard visualizer with learning mode and user interface improvements
   - `keyboard-visualizer-monospace-face` face includes adjustable height.
 - Various refactoring and bug fixes, such as filtering unnecessary characters from key descriptions.
 
-** Installation
+* Installation
 
 You can install =keyboard-visualizer= from MELPA (if published) or manually:
 
-*** Manual Installation
+** Manual Installation
 
 1. Download or clone the repository:
    
@@ -88,20 +96,21 @@ You can install =keyboard-visualizer= from MELPA (if published) or manually:
    (require 'keyboard-visualizer)
    #+end_src
    
-** Usage
+* Usage
 
 Once installed, you can start using =keyboard-visualizer= right away. Below are the key commands and features:
 
 | Keybinding                             | Command                                                   | Description |
 |----------------------------------------+-----------------------------------------------------------+-------------|
 | `M-x keyboard-visualizer-show-command` | Visualize a specific command's keybinding.                |             |
+| `C-c e`                                | Toggle ergonomic representation.                          |             |
 | `C-c b`                                | Open the main menu for interactive commands.              |             |
 | `C-c b j`                              | Fuzzy search for commands by description/query.           |             |
 | `C-c b n`                              | Show a random interactive command's keybinding.           |             |
 | `C-c b s`                              | Save the current keyboard layout to a file.               |             |
 | `C-c b b`                              | Toggle "insert mode" to visualize commands automatically. |             |
 
-*** Visualize a Command
+** Visualize a Command
 
 To visualize a specific command:
 
@@ -109,7 +118,15 @@ To visualize a specific command:
 M-x keyboard-visualizer-show-command RET some-command RET
 #+end_src
 
-*** Search Commands by Query
+** Show ergomic issues with key chords
+
+Will highlight the keys that could cause hand fatigue over a period of time.
+
+#+begin_src sh
+C-c b e
+#+end_src
+
+** Search Commands by Query
 
 Use fuzzy searching to look up commands:
 
@@ -119,7 +136,7 @@ C-c b j
 
 For example, type "undo" and choose the corresponding Emacs command.
 
-*** Enable Insert Mode
+** Enable Insert Mode
 
 Toggle insert mode to see visualizations for your recently executed commands:
 
@@ -127,7 +144,7 @@ Toggle insert mode to see visualizations for your recently executed commands:
 C-c b b
 #+end_src
 
-*** Save Layouts
+** Save Layouts
 
 You can save the current layout to a file and revisit it later:
 
@@ -168,21 +185,21 @@ Customize the appearance of normal and highlighted keys:
 (set-face-attribute 'keyboard-visualizer-highlight-face nil :box '(:line-width 2 :color "red"))
 #+end_src
 
-** Roadmap
+* Roadmap
 
-*** DOING Add transient like menu to activate different functionality
+** DOING Add transient like menu to activate different functionality
 
-*** DOING Show random functions and their keybindings for learning
+** DOING Show random functions and their keybindings for learning
 
-*** DOING Fuzzy search on simple command description for Emacs transition
+** DOING Fuzzy search on simple command description for Emacs transition
 
-*** DOING Save keybindings that are discovered through random learning
+** DOING Save keybindings that are discovered through random learning
 
-*** TODO Warning when keys in visualized command are not ergonomic
+** DOING Warning when keys in visualized command are not ergonomic
 
-*** TODO Key visualization to accomodate ergonomic keybinding setup
+** TODO Key visualization to accomodate ergonomic keybinding setup
 
-** Contribution
+* Contribution
 
 We welcome contributions! Here's how you can get started:
 
@@ -191,11 +208,11 @@ We welcome contributions! Here's how you can get started:
 3. Add tests or documentation for new features.
 4. Submit a pull request with a detailed description.
 
-** Acknowledgments
+* Acknowledgments
 
 Special thanks to the Emacs community for inspiration and support.
 
-** Feedback
+* Feedback
 
 Have questions, suggestions, or issues? Feel free to open a GitHub issue or reach out to us through the repository.
 
